[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Title.gd" type="Script" id=1]

[node name="Title" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.156863, 0.137255, 0.137255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_left = 100.0
margin_top = 34.0
margin_right = 220.0
margin_bottom = 146.0

[node name="GameName" type="RichTextLabel" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_right = 120.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
bbcode_enabled = true
bbcode_text = "
[center][b][wave][rainbow]Fox Fight Bats[/rainbow][/wave][/b][/center]"
text = "
Fox Fight Bats"

[node name="StartButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 44.0
margin_right = 120.0
margin_bottom = 64.0
focus_mode = 0
enabled_focus_mode = 0
text = "Start"
flat = true

[node name="TestButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 120.0
margin_bottom = 88.0
focus_mode = 0
enabled_focus_mode = 0
text = "Test"
flat = true

[node name="QuitButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 92.0
margin_right = 120.0
margin_bottom = 112.0
focus_mode = 0
enabled_focus_mode = 0
text = "Quit"
flat = true

[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/TestButton" to="." method="_on_TestButton_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
